# pandoc-code-include

./: README.md  app.py  pyproject.toml
src/pandoc_code_include/: main.py
test/: main.py
