[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
authors = [
  {name = "Alberto Veneri", email = "alberto.veneri@unive.it"},
  {name = "AClon314", email = "aclon-e@qq.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "A very simple filter to replace the unmaintained pandoc-code-include"
name = "pandoc-code-include"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.3"

dependencies = [
  "panflute>=2.3.0",
]

[project.scripts]
pandoc-code-include = "pandoc_code_include.__main__:main"

[project.urls]
"Bug Tracker" = "https://github.com/AClon314/py-pandoc-include-code/issues"
"Homepage" = "https://github.com/AClon314/py-pandoc-include-code"
